--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,11 @@
+#outer{
+    width: 600px;
+    height: 600px;
+    overflow: hidden;
+    background-color: rgba(255,0,0,.2);
+    position: relative;
+}
+
 #vr-container {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #eee;
