--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,9 @@
 #outer{
-    width: 600px;
-    height: 600px;
+    position: relative;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     background-color: rgba(255,0,0,.2);
-    position: relative;
 }
 
 #vr-container {
